--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.11.19",
     "node": "^15.10.0",
     "shelljs": "^0.8.4"
   }
